<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgregarProveedores">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="195dp"
            android:layout_height="111dp"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/user" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/RNombreP"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bordes_semiredondos"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ProvName"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="#ff787878" />

            <EditText
                android:id="@+id/RdocP"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bordes_semiredondos"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/ProvDoc"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="#ff787878" />

            <EditText
                android:id="@+id/RphoneP"
                android:layout_width="350dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"
                android:background="@drawable/bordes_semiredondos"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/PhoneNum"
                android:inputType="number"
                android:textColor="@color/black"
                android:textColorHint="#ff787878" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnReg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="14.5dp"
            android:backgroundTint="#00bcd4"
            android:text="@string/registro"
            android:textColor="@color/white"
            app:cornerRadius="50dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>