<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:background="#FFFFFF" android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/bg"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="257dp"
            android:layout_height="195dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@null"
            app:srcCompat="@drawable/user" />

       <EditText
            android:id="@+id/etNom"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/bordes_redondos_white"
            android:ems="10"
            android:hint="@string/UserDoc"
            android:inputType="text"
            android:textColor="@color/black"
            android:textColorHint="#787878" />

        <EditText
            android:id="@+id/etPass"
            android:layout_width="350dp"
            android:layout_height="40dp"
            android:layout_marginTop="10sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/bordes_redondos_white"
            android:ems="10"
            android:hint="@string/UserPass"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="#ff787878" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30sp"
            android:backgroundTint="#00bcd4"
            android:text="@string/ingresar"
            android:textColor="@color/white"
            app:cornerRadius="50dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>